# symex

./: .gitignore  README.md  oob.c  pyproject.toml
symexec_engine/: __init__.py  bugs.py  cli.py  example.py  executor.py  ir.py  x86_lifter.py
tests/: test_example.py
